Break GenContain.scala into GenContain1 and GenContain2 to shorten travis build time.